--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,8 @@
 <resources>
     <string name="app_name">Twitter Searches</string>
     <string name="queryPrompt">Enter Twitter search query here</string>
+    <string name="tagPrompt">Tag your query</string>
+    <string name="saveDescription">Touch this button to save your tagged search</string>
+    <string name="taggedSearches" />
+
 </resources>
